# city-average-temp

./: Cargo.toml  README  city-names.csv  output.csv
src/: main.rs
