[package]
name = "temperature-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
dialoguer = "0.11.0"
itertools = "0.11.0"
netcdf3 = "0.5.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
